[package]
name = "rustclock"
version = "0.1.0"
authors = ["heartyhardy <charith.n.rathnayake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustclock_lib"
crate-type = ["dylib"]

[dependencies]
chrono = "0.4"